--- a/WeeklyLogs/Log121425_122025.md
+++ b/WeeklyLogs/Log121425_122025.md
@@ -4,7 +4,7 @@
 1) Dec2015 storm analysis<br>
 * Discharge contribution shows MET influence further downstream and discharge influence further upstream
 * Nonlinear effect spatial map shows compound flooding area within Grays Harbor
-* Interaction index ($mu$) can describe dominant processes between ocean and river influence 
+* Interaction index ($\mu$) can describe dominant processes between ocean and river influence 
 
 
 2) Dec2025 storm post-storm vs. forecast<br>
@@ -45,11 +45,11 @@ Figure 3: Discharge ratio between the mouth and upstream Chehalis River.
 ![DischargeRatio_upstream](../Figures/121825meeting/Dec2015_dischargeratio_upstream.png)<br>
 Figure 4: Discharge ratio between Montesano and upstream Chehalis River.
 
-* Interaction index to characterize flow interaction ($mu$)
+* Interaction index to characterize flow interaction ($\mu$)
 	* Ratio index used in Juarez et al. (2022) to quantify interaction of river processes with ocean processes for every 12 hour tidal cycle (Fig. 5)
-	* $mu$ = min(u_mouth)/max(u_upstream)
-	* $mu$ <0 - ocean dominates
-	* $mu$ >0 - river dominates
+	* $\mu$ = min(u_mouth)/max(u_upstream)
+	* $\mu$ <0 - ocean dominates
+	* $\mu$ >0 - river dominates
 	* We can see when comparing both the velocity at the head and Montesano with the mouth that river influence dominates just after December 9th, where water levels become elevated AND damped
 
 ![IndexRatio](../Figures/121825meeting/Dec2015_interactionindex.png)<br>
