--- a/WeeklyLogs/Log121425_122025.md
+++ b/WeeklyLogs/Log121425_122025.md
@@ -78,3 +78,4 @@ Figure 6: Comparisons between TMD forecast, TMDW forecast, TMD post-storm model,
 	* I hypothesize that the previous analysis of MET and discharge influence might be better represented if I run:
 		* Tides only with base discharge (September 2015, semi-low flow) to more accurately model influence of increased discharge due to Dec. 2015 storm
 		* Tides+MET with base discharge (September 2015, semi-low flow) to more accurately model influence of increased discharge due to Dec. 2015 storm
+* Look at the Willapa field data from the Nov-Dec deployment
