--- a/WeeklyLogs/Log011826_012426.md
+++ b/WeeklyLogs/Log011826_012426.md
@@ -1,14 +1,15 @@
 # January 18 - 24, 2026
 
 ## Summary+takeaways:
-1) December 2015 analysis
+1) December 2015 analysis (Grays Harbor)
 * D8 tidal band is largest contributor to nonlinear interaction signal at Montesano
 * Same wavelet analysis done on upstream and downstream locations found minimal contribution from overtides 
 
 
 ## Results:
 ### 1) December 2015 analysis (Grays Harbor)
-* https://docs.google.com/document/d/1qJ-AD4PZNuqJLrgbc75YmX5wcYAvHjA1AhB6RHt6cMU/edit?tab=t.0
+* Expanded analysis:
+	* https://docs.google.com/document/d/1qJ-AD4PZNuqJLrgbc75YmX5wcYAvHjA1AhB6RHt6cMU/edit?tab=t.0
 * Still unsure about how to interpret results as literature commonly finds M4 to be the dominant overtide contributor 
 
 
